tests/NormalTests/paczka1/small_fuzzy/87192837.err
Error in line 1: plIUio S609 52,0
Error in line 2: 5TD2 A212 55,1
Error in line 4: a3PVIVz199f A212 69,0
